--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,6 @@ body {
   transform: translate(-50%, -50%);
   mix-blend-mode: difference;
   transition-timing-function: ease-in-out;
-  scale: 1.5;
 }
 
 .gradient-wrapper {
@@ -45,22 +44,16 @@ body {
 
 @media (min-width: 900px) {
   .hero-container {
-    background: linear-gradient(
-          to right,
-          var(--text-color-2) 2px,
-          transparent 2px
-        )
-        0 0,
+    background: linear-gradient(to right,
+        var(--text-color-2) 2px,
+        transparent 2px) 0 0,
       linear-gradient(to right, var(--text-color-2) 2px, transparent 2px) 0 100%,
       linear-gradient(to left, var(--text-color-2) 2px, transparent 2px) 100% 0,
-      linear-gradient(to left, var(--text-color-2) 2px, transparent 2px) 100%
-        100%,
+      linear-gradient(to left, var(--text-color-2) 2px, transparent 2px) 100% 100%,
       linear-gradient(to bottom, var(--text-color-2) 2px, transparent 2px) 0 0,
-      linear-gradient(to bottom, var(--text-color-2) 2px, transparent 2px) 100%
-        0,
+      linear-gradient(to bottom, var(--text-color-2) 2px, transparent 2px) 100% 0,
       linear-gradient(to top, var(--text-color-2) 2px, transparent 2px) 0 100%,
-      linear-gradient(to top, var(--text-color-2) 2px, transparent 2px) 100%
-        100%;
+      linear-gradient(to top, var(--text-color-2) 2px, transparent 2px) 100% 100%;
 
     background-repeat: no-repeat;
     background-size: 20px 20px;
