--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,8 @@ body {
 }
 
 .bg-grid {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(148 163 184 / 0.05)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(148 163 184 / 0.05)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e"), url("./assets/images/hero-dark.jpg");
+  background-position: 0 0, 50% 50%;
 }
 
 @media (min-width: 900px) {
@@ -62,13 +63,6 @@ body {
     background-repeat: no-repeat;
     background-size: 20px 20px;
   }
-}
-
-.frame {
-  position: relative;
-  display: block;
-  align-self: start;
-  isolation: isolate;
 }
 
 .anchor {
