--- a/src/App.css
+++ b/src/App.css
@@ -115,3 +115,8 @@ body {
   transform: translate(0.5rem, 0.5rem);
   pointer-events: none;
 }
+
+.box-shadow-gray {
+  box-shadow: inset 0 0 0 1px #ffffff1a;
+  ;
+}
