--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,14 @@ body {
   background-color: var(--bg-color);
 }
 
+hr {
+  margin: 0 auto;
+  width: 20%;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
+}
+
 #cursor {
   pointer-events: none;
   display: none;
